# mfc-numerics-a

./: .gitignore  README.md  plot_all.cmd  plot_all.sh  pyproject.toml
shallow_water/: parameters.py  solvers.py  utils.py
shallow_water/scripts/: plot_comparison.py  plot_convergence.py  plot_linear_convergence.py  plot_moment.py  plot_solution.py  plot_stability_sweep.py  test.py  test_linear.py
shallow_water/solvers/: linear.py  nonlinear.py  parameters.py
