[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shallow_water"]

[project]
name = "numerical-analysis-report"
version = "2024.0"
description="""Exercises and final report for the MFC CDT Numerical Analysis course."""
license = "MIT"
authors = [
    { name = "Niall Oswald", email = "niall.oswald20@imperial.ac.uk" },
]
dependencies = [
    "alive-progress",
    "matplotlib",
    "numpy", 
]
