[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shallow_water"]

[project]
name = "numerical-analysis-report"
version = "2024.0"
description="""Exercises and final report for the MFC CDT Numerical Analysis course."""
license = "MIT"
authors = [
    { name = "Niall Oswald", email = "niall.oswald20@imperial.ac.uk" },
]
dependencies = [
    "matplotlib",
    "numpy", 
]

[project.scripts]
plot_solution = "shallow_water.scripts.plot_solution:plot_solution"
plot_convergence = "shallow_water.scripts.plot_convergence:plot_convergence"
plot_moment = "shallow_water.scripts.plot_moment:plot_moment"
plot_stability_sweep = "shallow_water.scripts.plot_stability_sweep:plot_stability_sweep"
plot_comparison = "shallow_water.scripts.plot_comparison:plot_comparison"
